# raven

./: go.mod  main.go  pyproject.toml
raven/: __main__.py  client.py  main.py  server.py
raven/client/: __init__.py  client.py  device_input.py
raven/client/input/: input_device.py
raven/client/transport/: websocket_output.py
raven/models/: transfer_type.py
raven/models/data/: server_state.py
raven/models/request/: base.py  info_request.py  input_request.py  ping_request.py
raven/models/response/: base.py  info_response.py  ping_response.py
raven/server/: __init__.py  base.py  info.py  input.py  ping.py  server.py
tests/: test_raven.py
