[tool.poetry]
name = "raven"
version = "0.1.0"
description = ""
authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.3"
msgpack = "^1.0.4"
pydantic = "^1.10.2"
# -- Linux Dependencies
# - `evdev` Dependency: For mouse-events (reading+?)
evdev = { version = "^1.6.0", marker = "sys_platform = 'linux'" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
flake8 = "^5.0.4"
black = { version = "^22.8.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
