[tool.poetry]
name = "raven"
version = "0.1.0"
description = ""
authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
websockets = "^10.3"
msgpack = "^1.0.4"
pydantic = "^1.10.2"
# -- Linux Dependencies
# - `evdev` Dependency: For mouse-events (reading+?)
evdev = { version = "^1.6.0", platform = "linux" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = { version = "^22.8.0", allow-prereleases = true }
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
